--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -12,7 +12,7 @@
             <div class="descript">
               <% if topic.password_digest.nil? %>
                 <% if topic.image.attached? %>
-                  <%= link_to topic_path(topic) do %>
+                  <%= link_to topic_path(topic), password_digest: 1 do %>
                     <%= image_tag topic.image %>
                   <% end %>
                 <% end %>
